deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zubi-python-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: zubi-container
        image: adrainbialon/zubi-app:v1
        ports:
        - containerPort: 8000
